--- a/src/index.css
+++ b/src/index.css
@@ -186,14 +186,11 @@ body {
 }
 
 @layer components {
-  * {
-    @apply transition-all duration-200;
-  }
   .floatingButton {
-    @apply p-2 absolute right-0 bg-[var(--floating-button-bg-color)] text-[var(--floating-button-text-color)] border border-[var(--border-color)] rounded-full  hover:bg-[var(--floating-button-hover-bg-color)] cursor-pointer;
+    @apply p-2 absolute right-0 bg-[var(--floating-button-bg-color)] text-[var(--floating-button-text-color)] border border-[var(--border-color)] rounded-full transition-all duration-200 hover:bg-[var(--floating-button-hover-bg-color)] cursor-pointer;
   }
   .refreshButton {
-    @apply p-2 absolute right-10 bg-[var(--floating-button-bg-color)] text-[var(--floating-button-text-color)] border border-[var(--border-color)] rounded-full  hover:bg-[var(--floating-button-hover-bg-color)] cursor-pointer;
+    @apply p-2 absolute right-10 bg-[var(--floating-button-bg-color)] text-[var(--floating-button-text-color)] border border-[var(--border-color)] rounded-full transition-all duration-200 hover:bg-[var(--floating-button-hover-bg-color)] cursor-pointer;
   }
   .seccionTienda {
     @apply sm:left-[75px] md:left-[29%] xl:left-[360px] flex justify-start items-center;
@@ -204,13 +201,13 @@ body {
     appearance: none;
   }
   .selectorTienda {
-    @apply p-2 bg-[var(--selector-tienda-bg-color)] text-[var(--selector-tienda-text-color)] text-xs border border-[var(--border-color)] rounded-md  shadow-md cursor-pointer;
+    @apply p-2 bg-[var(--selector-tienda-bg-color)] text-[var(--selector-tienda-text-color)] text-xs border border-[var(--border-color)] rounded-md transition-all duration-200 shadow-md cursor-pointer;
   }
   .selectorTienda option {
     @apply bg-[var(--selector-tienda-bg-color)] text-[var(--selector-tienda-text-color)] text-xs;
   }
   .iconoTienda {
-    @apply w-9 h-9 bg-none text-[var(--selector-tienda-bg-color)] text-xs m-2 border border-[var(--border-color)] rounded-md  shadow-md;
+    @apply w-9 h-9 bg-none text-[var(--selector-tienda-bg-color)] text-xs m-2 border border-[var(--border-color)] rounded-md transition-all duration-200 shadow-md;
   }
   .seccionBotones {
     @apply flex justify-between items-center absolute bottom-0 w-full min-h-10;
@@ -234,11 +231,11 @@ body {
 
   .customContextMenu,
   .customContextMenu>ul>li>ul {
-    @apply w-32 p-0 m-0 border border-[var(--border-color)] rounded-lg shadow-lg bg-[var(--context-bg-color)] text-xs ;
+    @apply w-32 p-0 m-0 border border-[var(--border-color)] rounded-lg shadow-lg bg-[var(--context-bg-color)] text-xs transition-all duration-200;
     animation: rollIn 0.2s ease-in-out;
   }
   .customContextMenu li:not(:last-child) {
-    @apply cursor-pointer h-auto border-b border-[var(--border-color)]  hover:bg-[var(--context-hover-bg-color)];
+    @apply cursor-pointer h-auto border-b border-[var(--border-color)] transition-all duration-200 hover:bg-[var(--context-hover-bg-color)];
   }
   .customContextMenu a {
     @apply p-2 py-3;
@@ -273,28 +270,28 @@ body {
     @apply border-b-0 border-[var(--task-divider-color)] md:my-4 my-2;
   }
   .modalInput {
-    @apply w-60 md:w-96 p-2 mb-2 bg-[var(--modal-input-bg-color)] text-sm border border-[var(--border-color)] rounded-md text-[var(--modal-input-text-color)]  md:max-h-10 max-h-9;
+    @apply w-60 md:w-96 p-2 mb-2 bg-[var(--modal-input-bg-color)] text-sm border border-[var(--border-color)] rounded-md text-[var(--modal-input-text-color)] transition-all duration-200 md:max-h-10 max-h-9;
   }
   .modalInputSmall {
-    @apply w-28 md:w-40 p-2 me-2 mb-3 bg-[var(--modal-input-bg-color)] text-sm border border-[var(--border-color)] rounded-md text-[var(--modal-input-text-color)]  md:max-h-10 max-h-9;
+    @apply w-28 md:w-40 p-2 me-2 mb-3 bg-[var(--modal-input-bg-color)] text-sm border border-[var(--border-color)] rounded-md text-[var(--modal-input-text-color)] transition-all duration-200 md:max-h-10 max-h-9;
   }
   .modalTextArea {
     @apply text-xs md:max-h-none;
   }
   .modalSelect {
-    @apply w-60 md:w-96 p-2 mb-3 text-sm border border-[var(--border-color)] rounded-md text-[var(--text-color)] ;
+    @apply w-60 md:w-96 p-2 mb-3 text-sm border border-[var(--border-color)] rounded-md text-[var(--text-color)] transition-all duration-200;
   }
   .modalLabel {
     @apply text-sm font-bold mb-2;
   }
   .modalBoton {
-    @apply bg-[var(--modal-button-bg-color)] text-[var(--modal-button-text-color)] py-2 px-4 rounded-md  hover:bg-[var(--modal-button-hover-bg-color)] cursor-pointer text-base;
+    @apply bg-[var(--modal-button-bg-color)] text-[var(--modal-button-text-color)] py-2 px-4 rounded-md transition-all duration-200 hover:bg-[var(--modal-button-hover-bg-color)] cursor-pointer text-base;
   }
   .modalLabel {
     @apply text-sm font-bold mb-2 me-3;
   }
   .modalLista {
-    @apply w-60 md:w-96 p-2 my-3 bg-[var(--modal-input-bg-color)] text-xs border rounded-md text-[var(--modal-input-text-color)] ;
+    @apply w-60 md:w-96 p-2 my-3 bg-[var(--modal-input-bg-color)] text-xs border rounded-md text-[var(--modal-input-text-color)] transition-all duration-200;
   }
   .modalListItem {
     @apply flex justify-between items-center;
@@ -312,19 +309,19 @@ body {
   .barraLateral {
     @apply bg-[var(--barra-bg-color)] fixed top-0 left-0
     md:w-1/4 xl:w-80 h-screen shadow-[rgba(30,58,138,0.5)_3px_0px_3px_0px]
-    ;
+    transition-all duration-200;
   }
   .tituloBarraLateral {
     @apply flex justify-center text-[var(--barra-text-color)] text-3xl font-bold p-4 my-6 mt-2 md:mt-6;
   }
   .logoBarraLateral {
-    @apply md:mr-2 md:mt-1 w-6 h-8 ;
+    @apply md:mr-2 md:mt-1 w-6 h-8 transition-all duration-200;
   }
   .iconoBarraLateral {
-    @apply md:mr-2 md:mt-1 w-4 h-4 ;
+    @apply md:mr-2 md:mt-1 w-4 h-4 transition-all duration-200;
   }
   .itemBarraLateral {
-    @apply flex justify-center md:justify-start text-[var(--barra-text-color)] p-2 m-2 rounded-md  hover:bg-[var(--barra-item-hover-color)] hover:shadow-md hover:scale-105 cursor-pointer;
+    @apply flex justify-center md:justify-start text-[var(--barra-text-color)] p-2 m-2 rounded-md transition-all duration-200 hover:bg-[var(--barra-item-hover-color)] hover:shadow-md hover:scale-105 cursor-pointer;
   }
   .itemBarraLateralActive {
     @apply bg-[var(--barra-item-active-color)] shadow-md scale-100;
@@ -334,7 +331,7 @@ body {
   }
   .toggleModeLight,
   .toggleModeDark {
-    @apply w-6 h-6 rounded-md ;
+    @apply w-6 h-6 rounded-md transition-all duration-200;
   }
   
   .toggleModeLight.animate,
@@ -346,10 +343,10 @@ body {
   /* SECCIÓN PRINCIPAL */
   /* ********************* */
   .seccionPrincipal {
-    @apply md:w-3/4 w-full xl:w-full h-screen max-h-screen ml-12 md:ml-[25%] xl:ml-80 px-5 pb-5 md:p-10 md:pt-0 bg-[var(--section-bg-color)] text-[var(--title-text-color)] ;
+    @apply md:w-3/4 w-full xl:w-full h-screen max-h-screen ml-12 md:ml-[25%] xl:ml-80 px-5 pb-5 md:p-10 md:pt-0 bg-[var(--section-bg-color)] text-[var(--title-text-color)] transition-all duration-200;
   }
   .tituloSeccion {
-    @apply z-50 text-2xl md:text-4xl font-bold max-w-5xl sticky top-0 pt-5 bg-[var(--section-bg-color)] border-b-2 border-[var(--border-color)] ;
+    @apply z-50 text-2xl md:text-4xl font-bold max-w-5xl sticky top-0 pt-5 bg-[var(--section-bg-color)] border-b-2 border-[var(--border-color)] transition-all duration-200;
   }
   .contenidoPrincipal {
     @apply max-w-5xl h-[94%] max-h-[94%] md:h-[97%] md:max-h-[97%] relative z-[500] overflow-auto sm:scrollbar-hide;
@@ -365,22 +362,22 @@ body {
   /* TAREAS */
   /* ********************* */
   .tarea {
-    @apply shadow-md rounded-md text-sm hover:shadow-xl hover:bg-[var(--item-hover-bg-color)]  text-[var(--task-text-color)] border border-transparent;
+    @apply shadow-md rounded-md text-sm hover:shadow-xl hover:bg-[var(--item-hover-bg-color)] transition-all duration-200 text-[var(--task-text-color)] border border-transparent;
   }
   .tituloTarea {
     @apply flex justify-between font-bold text-sm text-[var(--task-text-color)] ;
   }
   .descTarea {
-    @apply text-xs mt-2 md:flex justify-between  text-[var(--task-text-color)] ;
+    @apply text-xs mt-2 md:flex justify-between transition-all duration-200 text-[var(--task-text-color)] ;
   }
   .descTareaHide {
-    @apply h-0 overflow-hidden ;
+    @apply h-0 overflow-hidden transition-all duration-200;
   }
   .descTareaShow {
-    @apply h-auto ;
+    @apply h-auto transition-all duration-200;
   }
   .botonTarea {
-    @apply me-4 text-base hover:text-[var(--item-button-hover-text-color)] ;
+    @apply me-4 text-base hover:text-[var(--item-button-hover-text-color)] transition-all duration-200;
   }
   .hrSeccion {
     @apply border-b-0 border-[var(--task-divider-color)] my-6;
@@ -398,7 +395,7 @@ body {
   /* PRODUCTOS */
   /* ********************* */
   .producto {
-    @apply flex justify-between bg-[var(--item-bg-color)] shadow-md rounded-md text-xs md:text-sm p-2 mb-1 border border-transparent ;
+    @apply flex justify-between bg-[var(--item-bg-color)] shadow-md rounded-md text-xs md:text-sm p-2 mb-1 border border-transparent transition-all duration-200;
   }
   .producto:hover {
     @apply shadow-xl bg-[var(--item-hover-bg-color)] border-[var(--border-color)] cursor-default;
@@ -419,7 +416,7 @@ body {
     @apply flex justify-between align-middle items-center gap-2;
   }
   .botonContador {
-    @apply w-5 h-5 md:w-6 md:h-6 pb-1 p-1 rounded-lg cursor-pointer bg-transparent ;
+    @apply w-5 h-5 md:w-6 md:h-6 pb-1 p-1 rounded-lg cursor-pointer bg-transparent transition-all duration-200;
   }
   .botonAdd {
     @apply hover:bg-[var(--item-button-add-hover-text-color)] hover:text-[var(--item-button-hover-text-color)];
@@ -431,16 +428,16 @@ body {
     @apply w-5 h-5 md:w-6 md:h-6 font-bold bg-[var(--item-counter-bg-color)] text-[var(--text-color)] text-center flex justify-center items-center align-middle border border-[var(--border-color)] rounded-md cursor-text;
   }
   .botonComprar {
-    @apply bg-emerald-[var(--item-button-hover-text-color)] md:ms-4 p-1 w-5 h-5 md:w-6 md:h-6 rounded-md  cursor-pointer;
+    @apply bg-emerald-[var(--item-button-hover-text-color)] md:ms-4 p-1 w-5 h-5 md:w-6 md:h-6 rounded-md transition-all duration-200 cursor-pointer;
   }
   .productoDesc {
-    @apply text-xs md:text-sm ;
+    @apply text-xs md:text-sm transition-all duration-200;
   }
   .iconoDesc {
-    @apply w-4 h-4 rotate-0 ;
+    @apply w-4 h-4 rotate-0 transition-all duration-200;
   }
   .rotated {
-    @apply transform rotate-180 ;
+    @apply transform rotate-180 transition-all duration-200;
   }
   .despensa,
   .listaCompra {
@@ -448,7 +445,7 @@ body {
   }
   .iconoScrollBottom,
   .iconoScrollTop {
-    @apply flex w-6 h-6 sticky left-[45%] cursor-pointer animate-bounce ;
+    @apply flex w-6 h-6 sticky left-[45%] cursor-pointer animate-bounce transition-all duration-200;
   }
   .iconoScrollTop {
     @apply top-2;
@@ -462,19 +459,19 @@ body {
   /* ********************* */
   .etiquetas {
     @apply flex flex-wrap gap-2 mb-2 z-50 mt-2 max-h-[3.8rem] overflow-auto sm:scrollbar-hide bg-[var(--section-bg-color)]
-    bg-opacity-100 top-16 md:top-[4.2rem] items-center ;
+    bg-opacity-100 top-16 md:top-[4.2rem] items-center transition-all duration-200;
   }
   .etiqueta {
     @apply p-1 px-2 bg-[var(--tag-bg-color)] text-[var(--tag-text-color)] text-[.65rem] border border-[var(--border-color)] rounded-xl cursor-pointer;
   }
   .etiqueta:hover {
-    @apply bg-[var(--tag-hover-bg-color)] shadow-md ;
+    @apply bg-[var(--tag-hover-bg-color)] shadow-md transition-all duration-200;
   }
   .etiquetaSeleccionada {
     @apply font-bold bg-[var(--tag-selected-bg-color)] text-[var(--tag-selected-text-color)] text-[.65rem] border border-[var(--border-color)] rounded-xl cursor-pointer;
   }
   .etiquetaSeleccionada:hover {
-    @apply bg-[var(--tag-selected-hover-bg-color)] shadow-md ;
+    @apply bg-[var(--tag-selected-hover-bg-color)] shadow-md transition-all duration-200;
   }
   .etiquetaAdd {
     @apply p-1 px-2 bg-[var(--tag-selected-hover-bg-color)] text-[var(--tag-selected-text-color)] text-[.65rem] border border-[var(--border-color)] rounded-xl cursor-pointer;
@@ -484,13 +481,13 @@ body {
   /* RECETAS */
   /* ********************* */
   .recetaDiv {
-    @apply mb-1 hover:bg-[var(--item-hover-bg-color)] shadow-md rounded-md p-1 border border-transparent ;
+    @apply mb-1 hover:bg-[var(--item-hover-bg-color)] shadow-md rounded-md p-1 border border-transparent transition-all duration-200;
   }
   .recetas {
     @apply h-[94%] max-h-[94%] relative pt-4 rounded-md;
   }
   .receta {
-    @apply justify-between bg-[var(--item-bg-color)] shadow-md rounded-md p-2 border border-transparent ;
+    @apply justify-between bg-[var(--item-bg-color)] shadow-md rounded-md p-2 border border-transparent transition-all duration-200;
   }
   .tituloReceta {
     @apply border-b-2 border-[var(--border-color)];
@@ -505,7 +502,7 @@ body {
     @apply me-2 my-2 p-0 text-xs;
   }
   .tagPill:hover {
-    @apply bg-[var(--tag-hover-bg-color)] shadow-md  cursor-default;
+    @apply bg-[var(--tag-hover-bg-color)] shadow-md transition-all duration-200 cursor-default;
   }
   .tituloSeccionReceta {
     @apply text-[var(--recipe-section-title-color)] text-lg font-bold mb-5 cursor-default;
