--- a/src/index.css
+++ b/src/index.css
@@ -333,7 +333,6 @@ body {
   .toggleModeDark {
     @apply w-6 h-6 rounded-md transition-all duration-200;
   }
-  
   .toggleModeLight.animate,
   .toggleModeDark.animate {
     animation: spinFade 0.3s ease-in-out;
@@ -355,7 +354,7 @@ body {
     display: none;
   }
   .h1Seccion {
-    @apply text-xl font-bold mb-5;
+    @apply text-xl font-bold mb-4 pt-3;
   }
 
   /* ********************* */
@@ -383,13 +382,69 @@ body {
     @apply border-b-0 border-[var(--task-divider-color)] my-6;
   }
   .tareas {
-    @apply h-[94%] max-h-[94%] relative;
+    @apply h-full max-h-full relative;
   }
   .tareasAbiertas,
   .tareasCerradas {
     @apply h-[40%] max-h-[40%] overflow-auto sm:scrollbar-hide;
   }
-
+  .houseTaskButtons {
+    @apply justify-between items-center pt-5 px-3 mb-5 grid grid-cols-4 md:grid-cols-5 gap-4 transition-all duration-200;
+  }
+  .houseTaskButton {
+    @apply p-1 md:p-2 text-[var(--floating-button-text-color)] transition-all rounded-md
+      duration-200 flex flex-col justify-center items-center;
+  }
+  .houseTaskIcon {
+    @apply w-9 h-9 md:w-14 md:h-14 p-2 mb-1 bg-[var(--floating-button-bg-color)]
+      text-[var(--floating-button-text-color)] border border-[var(--border-color)]
+      rounded-md transition-all duration-200 cursor-pointer;
+  }
+  .houseTaskButton:hover {
+    @apply shadow-lg;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 -4px 8px rgba(0, 0, 0, 0.2), -4px 0 8px rgba(0, 0, 0, 0.2), 4px 0 8px rgba(0, 0, 0, 0.2);
+  }
+  .houseTaskButton:hover .houseTaskIcon {
+    @apply bg-[var(--floating-button-hover-bg-color)];
+  }
+  .houseTaskButton:active {
+    @apply shadow-none;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
+  .houseTaskButtonText {
+    @apply text-xs font-bold;
+  }
+  .houseTaskList {
+    @apply md:h-[80%] md:max-h-[80%] h-[70%] max-h-[70%] overflow-auto
+      sm:scrollbar-hide cursor-default mx-2;
+  }
+  .houseTaskList::-webkit-scrollbar {
+    display: none;
+  }
+  .houseTaskTitle {
+    @apply text-lg font-bold mb-3;
+  }
+  .houseTaskItem {
+    @apply flex justify-between items-center rounded-md p-1;
+  }
+  .houseTaskItem:hover {
+    @apply bg-[var(--item-hover-bg-color)] shadow-md;
+  }
+  .houseTaskName {
+    @apply md:w-3/4 md:text-base text-sm;
+  }
+  .houseTaskDate {
+    @apply md:w-1/4 text-right md:text-sm text-xs text-[var(--item-fechacompra-text-color)];
+  }
+  .houseTaskItemOld {
+    @apply opacity-30
+  }
+  .shadow-top {
+    box-shadow: inset 0 10px 10px -10px rgba(0, 0, 0, 0.5);
+  }
+  .shadow-bottom {
+    box-shadow: inset 0 -10px 10px -10px rgba(0, 0, 0, 0.5);
+  }
 
   /* ********************* */
   /* PRODUCTOS */
