--- a/src/index.css
+++ b/src/index.css
@@ -224,6 +224,22 @@ body {
     align-items: center;
     height: 100vh;
   }
+  .connection-status-icon {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    align-items: center;
+    background-color: white;
+    padding: 5px;
+    border: 1px solid red;
+    border-radius: 5px;
+    z-index: 1000;
+  }
+  .connection-status-icon span {
+    margin-left: 5px;
+    color: red;
+  }
 
   /* ********************* */
   /* CONTEXT */
