--- a/src/index.css
+++ b/src/index.css
@@ -410,7 +410,7 @@ body {
     @apply md:mr-2 md:mt-1 w-6 h-8 transition-all duration-200;
   }
   .iconoBarraLateral {
-    @apply md:mr-2 md:mt-1 w-4 h-4 transition-all duration-200;
+    @apply md:mr-4 md:mt-1 my-1 w-5 h-5 transition-all duration-200;
   }
   .itemBarraLateral {
     @apply flex justify-center md:justify-start text-[var(--barra-text-color)] p-2 m-2 rounded-md transition-all duration-200 hover:bg-[var(--barra-item-hover-color)] hover:shadow-md hover:scale-105 cursor-pointer;
@@ -419,7 +419,7 @@ body {
     @apply bg-[var(--barra-item-active-color)] shadow-md scale-100;
   }
   .toggleMode {
-    @apply absolute bottom-0 left-5 p-2 m-2 text-[var(--barra-text-color)] text-xs cursor-pointer flex items-center justify-between gap-14;
+    @apply absolute bottom-0 md:left-5 p-2 my-2 text-[var(--barra-text-color)] text-xs cursor-pointer flex items-center justify-between gap-8;
   }
   .toggleModeLight,
   .toggleModeDark {
