--- a/src/index.css
+++ b/src/index.css
@@ -134,7 +134,7 @@
 
 .dark {
   --text-color: rgb(77, 77, 77);
-  /* gray-100 */
+  /* gray-700 */
   --border-color: rgb(209 213 219);
   /* gray-300 */
   --bg-color: rgb(31 41 55);
@@ -419,7 +419,7 @@ body {
     @apply bg-[var(--barra-item-active-color)] shadow-md scale-100;
   }
   .toggleMode {
-    @apply absolute bottom-0 md:left-5 p-2 my-2 text-[var(--barra-text-color)] text-xs cursor-pointer flex items-center justify-between gap-8;
+    @apply absolute bottom-0 md:left-3 p-2 my-2 text-[var(--barra-text-color)] text-xs flex items-center justify-between gap-3;
   }
   .toggleModeLight,
   .toggleModeDark {
@@ -428,6 +428,19 @@ body {
   .toggleModeLight.animate,
   .toggleModeDark.animate {
     animation: spinFade 0.3s ease-in-out;
+  }
+  .authButtonContainer {
+    @apply flex gap-4 justify-center items-center my-2 transition-all duration-200 border-s-2 border-[var(--border-color)] ps-5;
+  }
+  .authPill,
+  .authButtonCompact {
+    @apply w-8 h-8 rounded-full bg-blue-500 text-white flex items-center justify-center font-bold uppercase;
+  }
+  .authButton {
+    @apply bg-blue-500 text-white py-2 px-4 rounded-md transition-all duration-200 hover:bg-blue-600 cursor-pointer;
+  }
+  .authButtonCompact {
+    @apply absolute bottom-14 left-3 md:bottom-auto;
   }
 
   /* ********************* */
@@ -505,7 +518,7 @@ body {
     box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
   }
   .houseTaskButtonText {
-    @apply text-xs font-bold;
+    @apply text-xs font-bold text-[var(--form-input-text-color)] transition-all duration-200;
   }
   .houseTaskList {
     @apply md:h-[70%] md:max-h-[70%] h-[70%] max-h-[70%] overflow-auto
